log
ju., 17 de mar. de 2022 11:50:30: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
37d0175
ju., 17 de mar. de 2022 11:52:36: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
552286f
ju., 17 de mar. de 2022 11:55:32: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
942a7af
ju., 17 de mar. de 2022 11:56:14: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c9f057a
ju., 17 de mar. de 2022 11:56:58: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
7d2155d
ju., 17 de mar. de 2022 11:57:11: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
4e7f491
ju., 17 de mar. de 2022 12:00:13: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
578e7b4
ju., 17 de mar. de 2022 12:01:47: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d1eafe2
ju., 17 de mar. de 2022 12:04:43: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
2f76b1e
ju., 17 de mar. de 2022 12:06:11: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
b527eb8
ju., 17 de mar. de 2022 12:08:19: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'prevList':
list.c:60:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   60 |     if(list->current->prev = NULL)return NULL;
      |        ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
45ea0f2
ju., 17 de mar. de 2022 12:08:41: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
e30803a
ju., 17 de mar. de 2022 12:10:25: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
6bf5f3f
ju., 17 de mar. de 2022 12:11:24: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
f45fe74
sá., 19 de mar. de 2022 23:36:25: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
701cb24
sá., 19 de mar. de 2022 23:38:31: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:71:19: error: 'list->head' is a pointer; did you mean to use '->'?
   71 |         list->head.prev = nuevoNodo;
      |                   ^
      |                   ->
Compilation failed
3798257
sá., 19 de mar. de 2022 23:38:41: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
2f44ed6
sá., 19 de mar. de 2022 23:44:12: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
d141dac
sá., 19 de mar. de 2022 23:45:54: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
33eda27
sá., 19 de mar. de 2022 23:46:09: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
5ab7727
sá., 19 de mar. de 2022 23:49:45: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
6360848
do., 20 de mar. de 2022 12:16:22: 
 list.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  9|3
total_score: 35/70
b50f368
do., 20 de mar. de 2022 12:17:36: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  10|2
total_score: 45/70
ff5f0a0
do., 20 de mar. de 2022 12:34:40: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
cf61c94
do., 20 de mar. de 2022 12:44:28: 
 list.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  10|2
total_score: 45/70
24e7705
do., 20 de mar. de 2022 12:44:45: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
62f279b
do., 20 de mar. de 2022 12:45:31: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
c76bdcb
do., 20 de mar. de 2022 12:46:10: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
cad6f87
do., 20 de mar. de 2022 12:46:23: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
d3be1a1
do., 20 de mar. de 2022 13:03:39: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
02fc02d
do., 20 de mar. de 2022 13:11:40: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
ec7da81
do., 20 de mar. de 2022 13:20:47: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
95c4b04
do., 20 de mar. de 2022 13:23:58: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
c8ebb44
do., 20 de mar. de 2022 13:24:10: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
fd27916
do., 20 de mar. de 2022 13:37:40: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
8890719
do., 20 de mar. de 2022 13:38:33: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
8aef9c0
do., 20 de mar. de 2022 13:39:59: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
40e6434
do., 20 de mar. de 2022 13:40:13: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
f446047
do., 20 de mar. de 2022 13:55:38: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'popCurrent':
list.c:116:41: error: expected ';' before '}' token
  116 |         list->head = list->current->next
      |                                         ^
      |                                         ;
  117 |     }
      |     ~                                    
list.c:122:1: error: control reaches end of non-void function [-Werror=return-type]
  122 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
3f88e0e
do., 20 de mar. de 2022 13:55:58: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'popCurrent':
list.c:117:41: error: expected ';' before '}' token
  117 |         list->head = list->current->next
      |                                         ^
      |                                         ;
  118 |     }
      |     ~                                    
list.c:123:1: error: control reaches end of non-void function [-Werror=return-type]
  123 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
4945ceb
do., 20 de mar. de 2022 13:56:11: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'popCurrent':
list.c:123:1: error: control reaches end of non-void function [-Werror=return-type]
  123 | }
      | ^
cc1.exe: all warnings being treated as errors
Compilation failed
222de01
do., 20 de mar. de 2022 14:13:06: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|0
64b814f
do., 20 de mar. de 2022 14:13:46: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dca0e7d
do., 20 de mar. de 2022 14:14:31: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
b08abc3
do., 20 de mar. de 2022 14:24:27: 
 tests:  12|0
total_score: 70/70
dab9ee0
do., 20 de mar. de 2022 14:49:21: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7bfe85d
do., 20 de mar. de 2022 14:49:35: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a1f3905
do., 20 de mar. de 2022 14:49:43: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
2f2493b
do., 20 de mar. de 2022 15:00:59: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
18f51a0
do., 20 de mar. de 2022 15:01:15: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
e73d88d
do., 20 de mar. de 2022 15:12:54: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0bfff09
